# fatsecret-telegram-bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-17-fatsecret-voice-logger.md
docs/superpowers/specs/: 2026-06-16-fatsecret-voice-logger-design.md
fatsecret_telegram_bridge/: __main__.py  auth_setup.py  bot.py  config.py  diary.py  fatsecret_client.py  models.py  parser.py  resolver.py  service.py  store.py  units.py
fatsecret_telegram_bridge/llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py
fsai/: __main__.py  auth_setup.py  bot.py  config.py  diary.py  fatsecret_client.py  models.py  parser.py  resolver.py  service.py  store.py
fsai/llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py
tests/: conftest.py  test_auth_setup.py  test_bot_render.py  test_config.py  test_diary.py  test_fatsecret_client.py  test_llm_providers.py  test_models_smoke.py  test_parser.py  test_resolver.py  test_service.py  test_store.py
