[project]
name = "fsai"
version = "0.1.0"
description = "Voice food logger for FatSecret via Telegram"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21,<22",
    "fatsecret>=4.0,<5",
    "anthropic>=0.40",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fsai*"]
